    * ADD: development versions (devel, alpha, beta) are taking more logs and info from current firmware and hardware at first time installation procedure, give there to us for making better support of yours model
    * ADD: support for OpenLGTV_BCM dir on both USB1 and USB2 ports (just needs to be on it's first partition (/mnt/usb[1|2]/Drive1/OpenLGTV_BCM)
    * ADD: support for ywedata as ext3 partition image file: ywedata.ext3.img on USB storage devices (done this because of found problems with ywedata dir storage on FAT partitions, thanks sirius for testing)
    * ADD: ywedata.ext3.img image file on USB storage devices is created if it does not exist and ywedata is not populated yet
    * ADD: support for modified addon and browser partitions in NetCast configs modifications
    * ADD: NFS/CIFS Network Share mounting on boot and WebUI configuration features, this needs FAT formated USB stick plugged in as mount point, CIFS needs additional kernel driver module (cifs.ko)
    * ADD: WebUI is capable of saving changed settings file (be careful changing settings, not all of them have been tested enough)
    * ADD: WebUI is available without password on 127.0.0.1:88 and with root password authentication and user: openlgtv on 0.0.0.0:80 (accepting authenticated connections on LAN/WLAN)
    * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
    * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
    * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
    * CHANGE: move backup, flashed file and logs to 'flashed' subdir after successful flash
    * CHANGE: shorten USB storage check time to minimal with info how much time has it took
    * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation