@@ -144,6 +144,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: NFS/CIFS Network Share mounting on boot and WebUI configuration features, this needs FAT formated USB stick plugged in as mount point, CIFS needs additional kernel driver module (cifs.ko)
     * ADD: WebUI is capable of saving changed settings file (be careful changing settings, not all of them have been tested enough)
     * ADD: WebUI is available without password on 127.0.0.1:88 and with root password authentication and user: openlgtv on 0.0.0.0:80 (accepting authenticated connections on LAN/WLAN)
+    * ADD: making copy of boot log /var/log/OpenLGTV_BCM.log to USB storage device in OpenLGTV_BCM dir if it does not exist there - usally it should be first boot log
     * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
